fixed signup button on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -78,6 +78,11 @@
 		text-align: center;
 	}
 
+	#signup
+	{
+		top: 70px;
+	}
+
 /*********************************************************************************/
 /* UI                                                                            */
 /*********************************************************************************/
